2005-08-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionWriter.cs:
		Write back custom attributes of modules and assemblies
		as well as their security declaration.
	* Mono.Cecil.Implem/CodeWriter.cs:
		Fix branches computation.
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Disable custom attribute reading cache.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Compute relocations.
	* Mono.Cecil.Implem/ReflectionFactories.cs:
		Blah.

	* Mono.Cecil.Implem/TablesComparer.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Sort all tables that need to be sorted.

	* Mono.Cecil.Implem/CodeReader.cs:
		Oops. Add fat exception handlers to the method body.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/TypeDefinition.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Correct a few bugs: relocations now works.
		Encode enums in custom attributes.
		Compute memberrefs tokens before visitings types.

	* Mono.Cecil.Implem/FieldDefinition.cs:
		Correct a bug that causes null ref due to
		the new api.
	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Implement a very little more custom attributes
		writing.

2005-08-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMemberReferenceCollection.cs
	  Mono.Cecil/IReflectionVisitor.cs
	  Mono.Cecil/IReflectionFactories.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil/IModuleDefinition.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Implem/ReflectionFactories.cs
	  Mono.Cecil.Implem/ReflectionHelper.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs
	  Mono.Cecil.Implem/MemberReferenceCollection.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Handle member references nicely.

	* Mono.Cecil/ICustomAttributeProvider.cs
	  Mono.Cecil/IModuleDefinitionCollection.cs
	  Mono.Cecil/IReflectionStructureFactories.cs